# fastapi_magic_dto

./: .gitignore  README.md  pyproject.toml
.github/workflows/: publish.yml
examples/: complex_parsing.py  create_item.py  search_items.py  with_dataclasses.py
fastapi_magic_dto/: __init__.py  builder.py  markers.py
